<resources>
    <string name="app_name">Calculator</string>
    <string name="calc">Calculator</string>
    <string name="enter_first_number">Enter first Number</string>
    <string name="enter_second_number">Enter second Number</string>
    <string name="enter_third_number">Enter Third Number</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="calculate">Let\'s Find the Value</string>
    <string name="calculated">Lets Find the Value</string>
</resources>